ready to make map

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="Circle.js"></script>
     <script src="Cube.js"></script>
     <script src="Cylinder.js"></script>
+    <script src="Camera.js"></script>
     <script src="BlockyAnimal.js"></script>
 
   </body>
