ready for more decoration-all functionality added

--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
 
 
     <p>
-      Move Neck <input type="range" id="jointSlide" min="-15" max="15" value="0" class="slider">
-      Animation:
-      <button type="button" id="animateOn">ON</button>
-      <button type="button" id="animateOff">OFF</button>
-    <p>
-      Move Head <input type="range" id="headSlide" min="-12" max="15" value="0" class="slider">
+      Add and remove blocks directly below you:</br>
+      T: Add block</br>
+      R: Remove block</br></br>
+
+      Movement:</br>
+      W: Forward</br>
+      S: Backward</br>
+      A: Left</br>
+      D: Right</br></br>
+      Q: Pan Left</br>
+      E: Pan Right</br>
+      G: Pan Up</br>
+      B: Pan Down</br>
     <p>
       Camera Angle <input type="range" id="angleSlide" min="0" max="360" value="15" class="slider">
     </p>
