--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Change a point color</title>
+    <title>Rocky Terrain</title>
   </head>
 
   <body onload="main()">
@@ -15,8 +15,12 @@
     <p id="numdot"> XXX </p>
 
 
+    <button id="reset">Regenerate</button>
     <p>
-      Add and remove blocks directly below you:</br>
+      Game: Find the block </br>
+      Each time the world is generated, a red block will be randomly placed. Try to find it!</br></br>
+
+      Add and remove blocks:</br>
       T: Add block</br>
       R: Remove block</br></br>
 
@@ -41,7 +45,6 @@
     <script src="Triangle.js"></script>
     <script src="Circle.js"></script>
     <script src="Cube.js"></script>
-    <script src="Cylinder.js"></script>
     <script src="Camera.js"></script>
     <script src="BlockyAnimal.js"></script>
 
